syntax = "proto3";

option java_multiple_files = false;
option java_package="com.suns";
option java_outer_classname = "HelloProto";

message HelloRequest {
  string name = 1;
}

message HelloResponse{
  string result = 1;
}

message HelloRequest1{
  repeated string name = 1; //getNameKist()
}

message HelloResponse1{
  string result = 1;
}

service HelloService{
  rpc Hello(HelloRequest) returns (HelloResponse) {}
  rpc Hello1(HelloRequest1) returns (HelloResponse1) {}
  rpc c2s(HelloRequest) returns (stream HelloResponse) {}
  rpc cs2s(stream HelloRequest) returns (HelloResponse) {}
  rpc cs2ss(stream HelloRequest) returns (stream HelloResponse) {}
}











